--- a/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcvoiceroomdemo/src/main/res/layout/trtcvoiceroom_audio_effect_panel.xml
+++ b/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcvoiceroomdemo/src/main/res/layout/trtcvoiceroom_audio_effect_panel.xml
@@ -122,7 +122,7 @@
                 android:textColor="@color/trtcvoiceroom_light_black"
                 android:textSize="12sp" />
 
-            <android.support.v7.widget.SwitchCompat
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_music_audition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
