--- a/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcliveroomdemo/src/main/res/layout/trtcliveroom_fragment_room_list.xml
+++ b/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcliveroomdemo/src/main/res/layout/trtcliveroom_fragment_room_list.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,7 +12,7 @@
             android:id="@+id/rv_room_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/tv_list_empty"
