--- a/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcmeetingdemo/src/main/res/layout/trtc_item_setting_switch.xml
+++ b/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcmeetingdemo/src/main/res/layout/trtc_item_setting_switch.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/meeting_tv_enable_audio" />
 
-    <android.support.v7.widget.SwitchCompat
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switch_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
