--- a/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcvoiceroomdemo/src/main/res/layout/trtcvoiceroom_activity_create_voice_room.xml
+++ b/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcvoiceroomdemo/src/main/res/layout/trtcvoiceroom_activity_create_voice_room.xml
@@ -136,7 +136,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.v7.widget.SwitchCompat
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switch_need_request"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
