--- a/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcvoiceroomdemo/src/main/res/layout/trtcvoiceroom_fragment_room_list.xml
+++ b/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtcvoiceroomdemo/src/main/res/layout/trtcvoiceroom_fragment_room_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +15,7 @@
             android:id="@+id/rv_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/tv_listview_empty"
