--- a/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtccallingdemo/src/main/res/layout/trtccalling_videocall_activity_call_main.xml
+++ b/MMTencentTRTCSDK/Android/TRTCScenesDemo/trtccallingdemo/src/main/res/layout/trtccalling_videocall_activity_call_main.xml
@@ -22,8 +22,8 @@
 
     <com.tencent.liteav.trtccalling.ui.videocall.videolayout.TRTCVideoLayoutManager
         android:id="@+id/trtc_layout_manager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="180dp"
+        android:layout_height="320dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
