--- a/MMQiniuRTC_v3.x/app/src/main/res/layout/layout_config_view.xml
+++ b/MMQiniuRTC_v3.x/app/src/main/res/layout/layout_config_view.xml
@@ -29,7 +29,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="4dp" />
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/user_list_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
