--- a/MMZegoExpress/android/app/src/main/res/layout/activity_video_filter_main.xml
+++ b/MMZegoExpress/android/app/src/main/res/layout/activity_video_filter_main.xml
@@ -252,7 +252,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:id="@+id/faceunity_sdk_version"
+                android:id="@+id/sdk_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
         </LinearLayout>
